--- a/charts/o11y-service/values.yaml
+++ b/charts/o11y-service/values.yaml
@@ -18,8 +18,8 @@ global:
     enableClusterScopedPerm: true
     environmentType: ""
     appNamespaces:
-      - app-ns1
-      - app-ns2
+    - app-ns1
+    - app-ns2
     resources:
       serviceaccount:
         namespace: ""
@@ -176,7 +176,7 @@ global:
           allowPrivilegeEscalation: false
           capabilities:
             drop:
-              - ALL
+            - ALL
 
   otel:
     finops:
@@ -227,7 +227,7 @@ securityContext:
   allowPrivilegeEscalation: false
   capabilities:
     drop:
-      - ALL
+    - ALL
 
 
 service:
@@ -235,17 +235,17 @@ service:
   port: 7820
   targetPort: 7820
 
-resources: {}
+resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+  limits:
+    cpu: 100m
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 255Mi
 # resources:
 #  requests:
 #    cpu: 50m
@@ -288,21 +288,21 @@ extraEnvVarsSecret: ""
 # -- Extra volumeMounts for the integration services container.
 # More info: `kubectl explain deployment.spec.template.spec.containers.volumeMounts`.
 extraVolumeMounts: []
-  # - name: example
-  #   mountPath: /opt/tibco/example.txt
+# - name: example
+#   mountPath: /opt/tibco/example.txt
 #   subPath: example.txt
 
 # -- Extra volumes for the integration services container.
 # More info: `kubectl explain deployment.spec.template.spec.volumes`.
 extraVolumes: []
-  # - name: example
-  #   persistentVolumeClaim:
+# - name: example
+#   persistentVolumeClaim:
 #     claimName: exampleClaim
 
 # -- Additional init containers to add to the automationservices pod.
 extraInitContainers: []
-  # - name: dummy-init
-  #   image: busybox
+# - name: dummy-init
+#   image: busybox
 #   command: ['echo', "hey"]
 
 image:
@@ -314,10 +314,10 @@ ingress:
   hostsOverride: false
   className: haproxy
   hosts:
-    - host: ""
-      paths:
-        - path: /
-          pathType: Prefix
+  - host: ""
+    paths:
+    - path: /
+      pathType: Prefix
   # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
   annotations:
     ingress.kubernetes.io/path-rewrite: "/tibco/agent/o11y/{{ $.Values.global.cp.instanceId }}/o11y-service/(.*) /\\1"
@@ -340,10 +340,10 @@ jaeger:
     hostsOverride: false
     className: haproxy
     hosts:
-      - host: ""
-        paths:
-          - path: /
-            pathType: Prefix
+    - host: ""
+      paths:
+      - path: /
+        pathType: Prefix
     # -- Annotations for the ingress object. See documentation for your ingress controller for valid annotations.
     annotations:
       ingress.kubernetes.io/path-rewrite: "/tibco/agent/o11y/{{ $.Values.global.cp.instanceId }}/jaeger-query/(.*) /\\1"
