--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -139,37 +139,37 @@ config:
     # If set to null, will be overridden with values based on k8s resource limits
     memory_limiter: null
   receivers:
-#    jaeger:
-#      protocols:
-#        grpc:
-#          endpoint: ${env:MY_POD_IP}:14250
-#        thrift_http:
-#          endpoint: ${env:MY_POD_IP}:14268
-#        thrift_compact:
-#          endpoint: ${env:MY_POD_IP}:6831
-#    otlp:
-#      protocols:
-#        grpc:
-#          endpoint: ${env:MY_POD_IP}:4317
-#        http:
-#          endpoint: ${env:MY_POD_IP}:4318
-#    prometheus:
-#      config:
-#        scrape_configs:
-#          - job_name: opentelemetry-collector
-#            scrape_interval: 10s
-#            static_configs:
-#              - targets:
-#                  - ${env:MY_POD_IP}:8888
-#    zipkin:
-#      endpoint: ${env:MY_POD_IP}:9411
+  #    jaeger:
+  #      protocols:
+  #        grpc:
+  #          endpoint: ${env:MY_POD_IP}:14250
+  #        thrift_http:
+  #          endpoint: ${env:MY_POD_IP}:14268
+  #        thrift_compact:
+  #          endpoint: ${env:MY_POD_IP}:6831
+  #    otlp:
+  #      protocols:
+  #        grpc:
+  #          endpoint: ${env:MY_POD_IP}:4317
+  #        http:
+  #          endpoint: ${env:MY_POD_IP}:4318
+  #    prometheus:
+  #      config:
+  #        scrape_configs:
+  #          - job_name: opentelemetry-collector
+  #            scrape_interval: 10s
+  #            static_configs:
+  #              - targets:
+  #                  - ${env:MY_POD_IP}:8888
+  #    zipkin:
+  #      endpoint: ${env:MY_POD_IP}:9411
   service:
-#    telemetry:
-#      metrics:
-#        address: ${env:MY_POD_IP}:8888
+    #    telemetry:
+    #      metrics:
+    #        address: ${env:MY_POD_IP}:8888
     extensions:
-      - health_check
-      - memory_ballast
+    - health_check
+    - memory_ballast
 #    pipelines:
 #      logs:
 #        exporters:
@@ -277,7 +277,7 @@ securityContext:
   allowPrivilegeEscalation: false
   capabilities:
     drop:
-      - ALL
+    - ALL
 
 nodeSelector: {}
 tolerations: []
@@ -342,11 +342,14 @@ ports:
     protocol: TCP
 
 # Resource limits & requests. Update according to your own use case as these values might be too low for a typical deployment.
-resources: {}
-# resources:
-#   limits:
-#     cpu: 250m
-#     memory: 512Mi
+#resources: {}
+resources:
+  limits:
+    cpu: 250m
+    memory: 512Mi
+  requests:
+    cpu: 256m
+    memory: 257Mi
 
 podAnnotations: {}
 
@@ -362,9 +365,9 @@ hostNetwork: false
 # Adding entries to Pod /etc/hosts with HostAliases
 # https://kubernetes.io/docs/tasks/network/customize-hosts-file-for-pods/
 hostAliases: []
-  # - ip: "1.2.3.4"
-  #   hostnames:
-  #     - "my.host.com"
+# - ip: "1.2.3.4"
+#   hostnames:
+#     - "my.host.com"
 
 # Pod DNS policy ClusterFirst, ClusterFirstWithHostNet, None, Default, None
 dnsPolicy: ""
@@ -526,8 +529,8 @@ podMonitor:
   # The metrics port needs to be enabled as well.
   enabled: false
   metricsEndpoints:
-    - port: metrics
-      # interval: 15s
+  - port: metrics
+    # interval: 15s
 
   # additional labels for the PodMonitor
   extraLabels: {}
@@ -538,8 +541,8 @@ serviceMonitor:
   # The metrics port needs to be enabled as well.
   enabled: false
   metricsEndpoints:
-    - port: metrics
-      # interval: 15s
+  - port: metrics
+    # interval: 15s
 
   # additional labels for the ServiceMonitor
   extraLabels: {}
