--- a/charts/dp-core-infrastructure/charts/haproxy/values.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy/values.yaml
@@ -210,11 +210,11 @@ controller:
   ## ref: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/
   resources:
     limits:
-      cpu: 500m
-      memory: 800Mi
+      cpu: 250m
+      memory: 1Gi
     requests:
       cpu: 250m
-      memory: 600Mi
+      memory: 768Mi
 
   ## Horizontal Pod Scaler
   ## Only to be used with Deployment kind
