Update on Memory

--- a/charts/dp-core-infrastructure/charts/haproxy/values.yaml
+++ b/charts/dp-core-infrastructure/charts/haproxy/values.yaml
@@ -211,7 +211,7 @@ controller:
   resources:
     limits:
       cpu: 250m
-      memory: 1Gi
+      memory: 1024Mi
     requests:
       cpu: 250m
       memory: 768Mi
