disabling fluent bit deployment for apps

--- a/charts/bwprovisioner/values.yaml
+++ b/charts/bwprovisioner/values.yaml
@@ -32,7 +32,7 @@ global:
       # GitHub issue: https://github.com/fluent/fluent-bit/issues/872#issuecomment-827763207, https://github.com/kyma-project/kyma/pull/11657/files
       fluentbit:
         apps:
-          enabled: true
+          enabled: false
         enabled: true
         image:
           tag: 3.0.2
