--- a/charts/o11y-service/templates/ingress_jaeger.yaml
+++ b/charts/o11y-service/templates/ingress_jaeger.yaml
@@ -46,12 +46,8 @@ spec:
   {{- end }}
   rules:
   {{- range .Values.jaeger.ingress.hosts }}
-    {{- if .host }}
-    - host: {{ .host | quote }}
+    - host: "*.prod-tibco-sub-{{ .Values.global.tibco.subscriptionId}}.svc.cluster.local"
       http:
-    {{- else }}
-    - http:
-    {{- end }}
         {{- if $.Values.jaeger.ingress.hostsOverride -}}
         paths:
           {{- range .paths }}
