--- a/charts/bwprovisioner/templates/ingress_oauth2_proxy.yaml
+++ b/charts/bwprovisioner/templates/ingress_oauth2_proxy.yaml
@@ -43,12 +43,7 @@ spec:
   {{- end }}
   rules:
   {{- range .Values.oauth2proxy.ingress.hosts }}
-    {{- if .host }}
-    - host: {{ .host | quote }}
-      http:
-    {{- else }}
-    - http:
-    {{- end }}
+    - host: "*.prod-tibco-sub-{{ .Values.global.tibco.subscriptionId}}.svc.cluster.local"
         paths:
           {{- range .paths }}
           - path: {{ .path }}
