add subscription id to o11y global variables

--- a/charts/o11y-service/values.yaml
+++ b/charts/o11y-service/values.yaml
@@ -12,6 +12,7 @@ global:
     dataplaneId: dp-dp1
     instanceId: defaultinstid
     namespace: tp-dp-dp1
+    subscriptionId: "sub1"
     containerRegistry:
       secret: ""
       url: reldocker.tibco.com
